// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Back Only 1`] = `
<ds-breadcrumbs>
  <a
    href="#"
    aria-label="Tilbake til Eksamen"
  >
    Eksamen
  </a>
</ds-breadcrumbs>
`;

exports[`List Only 1`] = `
<ds-breadcrumbs
  aria-label="Du er her:"
  role="navigation"
>
  <ol>
    <li>
      <a href="#">
        Forside
      </a>
    </li>
    <li>
      <a href="#">
        Eksamen og prøver
      </a>
    </li>
    <li>
      <a href="#">
        Eksamen
      </a>
    </li>
    <li>
      <a
        href="#"
        aria-current="page"
      >
        Kartleggingsprøver
      </a>
    </li>
  </ol>
</ds-breadcrumbs>
`;

exports[`Long Items 1`] = `
<ds-breadcrumbs
  role="navigation"
  aria-label="Du er her:"
>
  <a
    href="#"
    aria-label="Tilbake til helsesertifikat for sjømat"
  >
    Slik søker du om å bli vurdert for videreutdanning
  </a>
  <ol aria-label="Du er her:">
    <li>
      <a href="#">
        Forside
      </a>
    </li>
    <li>
      <a href="#">
        Kvalitet og kompetanse
      </a>
    </li>
    <li>
      <a href="#">
        Arbeid med kvalitet og kompetanse
      </a>
    </li>
    <li>
      <a href="#">
        Videreutdanning
      </a>
    </li>
    <li>
      <a href="#">
        Videreutdanning for lærere
      </a>
    </li>
    <li>
      <a
        href="#"
        aria-current="page"
      >
        Slik søker du om å bli vurdert for videreutdanning
      </a>
    </li>
  </ol>
</ds-breadcrumbs>
`;

exports[`Mobile Viewport 1`] = `
<ds-breadcrumbs>
  <a
    href="#"
    aria-label="Tilbake til Utdanningsløpet"
  >
    Utdanningsløpet
  </a>
  <ol>
    <li>
      <a href="#">
        Forside
      </a>
    </li>
    <li>
      <a href="#">
        Utdanningsløpet
      </a>
    </li>
    <li>
      <a
        href="#"
        aria-current="page"
      >
        Grunnskole
      </a>
    </li>
  </ol>
</ds-breadcrumbs>
`;

exports[`Preview 1`] = `
<ds-breadcrumbs
  aria-label="Du er her:"
  role="navigation"
>
  <a
    href="#"
    aria-label="Tilbake til Utdanningsløpet"
  >
    Utdanningsløpet
  </a>
  <ol>
    <li>
      <a href="#">
        Forside
      </a>
    </li>
    <li>
      <a href="#">
        Utdanningsløpet
      </a>
    </li>
    <li>
      <a
        href="#"
        aria-current="page"
      >
        Grunnskole
      </a>
    </li>
  </ol>
</ds-breadcrumbs>
`;
